--- a/package.json
+++ b/package.json
@@ -15,7 +15,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.4",
+    "@types/express-session": "^1.15.12",
+    "@types/mongoose": "^5.3.20",
+    "@types/morgan": "^1.7.35",
+    "all": "^0.0.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "mongoose": "^5.4.17",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.10"
   },
   "devDependencies": {
