--- a/package.json
+++ b/package.json
@@ -1,36 +1,44 @@
 {
-  "name": "guitar-inventory",
+  "name": "node-base-auth",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
+  "description": "node-base-auths",
+  "main": "app.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
-    "prestart": "npm run build",
-    "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch src -e ts --exec npm run start"
+    "mongo:start": "docker run --name realworld-mongo -p 27017:27017 mongo & sleep 5",
+    "start": "node ./app.js",
+    "dev": "nodemon ./app.js",
+    "test": "newman run ./tests/api-tests.postman.json -e ./tests/env-api-tests.postman.json",
+    "stop": "lsof -ti :3000 | xargs kill",
+    "mongo:stop": "docker stop realworld-mongo && docker rm realworld-mongo"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gothinkster/productionready-node-api.git"
+  },
   "license": "ISC",
   "dependencies": {
-    "@types/cors": "^2.8.4",
-    "@types/express-session": "^1.15.12",
-    "@types/mongoose": "^5.3.20",
-    "@types/morgan": "^1.7.35",
     "all": "^0.0.0",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "mongoose": "^5.4.17",
-    "morgan": "^1.9.1",
-    "nodemon": "^1.18.10"
+    "body-parser": "1.15.0",
+    "cors": "2.7.1",
+    "ejs": "2.4.1",
+    "errorhandler": "1.4.3",
+    "express": "4.13.4",
+    "express-jwt": "3.3.0",
+    "express-session": "1.13.0",
+    "jsonwebtoken": "7.1.9",
+    "method-override": "2.3.5",
+    "methods": "1.1.2",
+    "mongoose": "4.4.10",
+    "mongoose-unique-validator": "1.0.2",
+    "morgan": "1.7.0",
+    "passport": "0.3.2",
+    "passport-local": "1.0.0",
+    "request": "2.69.0",
+    "slug": "0.9.1",
+    "underscore": "1.8.3"
   },
   "devDependencies": {
-    "@types/express": "^4.16.1",
-    "@types/node": "^11.9.3",
-    "tslint": "^5.12.1",
-    "typescript": "^3.3.3"
+    "newman": "^3.8.2",
+    "nodemon": "^1.11.0"
   }
 }
